Bug 268026 - Usability problem: behavior of user interface is different depending on the connection type
Summary: Usability problem: behavior of user interface is different depending on the c...
Status: RESOLVED FIXED
Alias: None
Product: knetworkmanager
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-09 00:57 UTC by aderocha
Modified: 2011-09-10 18:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: nm09
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aderocha 2011-03-09 00:57:03 UTC
Version:           0.9 (using KDE 4.5.5) 
OS:                Linux

In the "connections" list if I click on a established connection like Wired or Mobile Broadband the connection is disconnected but if I click on a established VPN connection, network manager will try to establish a new VPN connection.

It is also confusing not to have in the "connections" list the same small disconnect buttons available in the "interfaces" list. 
User has to guess the behavior of the user interface when clicking on a connection in the connections list.


Reproducible: Always

Steps to Reproduce:
click on established connections of types Mobile Broadband, Wired and VPN

Actual Results:  
Behavior is different depending on the connection type you click in the "connections" list
The missing "disconnect" buttons would help user to know where to click if wants to disconnect
Comment 1 Lamarque V. Souza 2011-09-10 18:08:01 UTC
Git commit 5509b30a626679a93725511dff959bd44b3c1f19 by Lamarque V. Souza.
Committed on 10/09/2011 at 20:04.
Pushed by lvsouza into branch 'nm09'.

Change click on connection list item behaviour to alternate between
activate and deactivate actions for all connection types.

BUG: 268026
FIXED-IN: nm09

M  +8    -2    applet/activatableitem.cpp

http://commits.kde.org/networkmanagement/5509b30a626679a93725511dff959bd44b3c1f19