Change click on connection list item behaviour to alternate between activate and deactivate actions for all connection types.

BUG: 268026
FIXED-IN: nm09